// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`universal: dist 1`] = `
Array [
  "index.es.js",
  "index.js",
  "types.d.ts",
]
`;

exports[`universal: dist/index.es.js 1`] = `
// ../../node_modules/lodash-es/isObjectLike.js
function isObjectLike(value) {
  return value != null && typeof value == "object";
}
var isObjectLike_default = isObjectLike;

// src/isImportMetaObjectLike.ts
function isImportMetaObjectLike() {
  return isObjectLike_default(import.meta);
}
export {
  isImportMetaObjectLike
};
/**
 * @license
 * Lodash (Custom Build) <https://lodash.com/>
 * Build: \`lodash modularize exports="es" -o ./\`
 * Copyright OpenJS Foundation and other contributors <https://openjsf.org/>
 * Released under MIT license <https://lodash.com/license>
 * Based on Underscore.js 1.8.3 <http://underscorejs.org/LICENSE>
 * Copyright Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
 */

`;

exports[`universal: dist/index.js 1`] = `
var __defProp = Object.defineProperty;
var __markAsModule = (target) => __defProp(target, "__esModule", { value: true });
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};

// src/index.ts
__markAsModule(exports);
__export(exports, {
  isImportMetaObjectLike: () => isImportMetaObjectLike
});

// ../../node_modules/lodash-es/isObjectLike.js
function isObjectLike(value) {
  return value != null && typeof value == "object";
}
__name(isObjectLike, "isObjectLike");
var isObjectLike_default = isObjectLike;

// src/isImportMetaObjectLike.ts
var import_meta = {};
function isImportMetaObjectLike() {
  return isObjectLike_default(import_meta);
}
__name(isImportMetaObjectLike, "isImportMetaObjectLike");
// Annotate the CommonJS export names for ESM import in node:
0 && (module.exports = {
  isImportMetaObjectLike
});
/**
 * @license
 * Lodash (Custom Build) <https://lodash.com/>
 * Build: \`lodash modularize exports="es" -o ./\`
 * Copyright OpenJS Foundation and other contributors <https://openjsf.org/>
 * Released under MIT license <https://lodash.com/license>
 * Based on Underscore.js 1.8.3 <http://underscorejs.org/LICENSE>
 * Copyright Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
 */

`;

exports[`universal: dist/types.d.ts 1`] = `
declare function isImportMetaObjectLike(): boolean;

export { isImportMetaObjectLike };

`;

exports[`universal: logs 1`] = `
- Resolving entry point
✔ Resolving entry point (<elapsedTime>)
- Resolving build manifests
✔ Resolving build manifests (<elapsedTime>)
- Creating Node (CJS) bundle
✔ Creating Node (CJS) bundle (<elapsedTime>)
- Creating Browser (ESM) bundle
✔ Creating Browser (ESM) bundle (<elapsedTime>)
- Creating Type declarations
✔ Creating Type declarations (<elapsedTime>)
`;
